adding python integration tests (wip)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@
 /*.xcodeproj
 /Build
 Package.resolved
+
+.idea
+.vscode
+
+# Byte-compiled / optimized / DLL files
+.pytest_cache/
+__pycache__/
+*.py[cod]
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
