--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,40 +1,40 @@
+# this file is not designed to be run directly
+# instead, use the docker-compose.<os>.<swift> files
+# eg docker-compose -f docker/docker-compose.yaml -f docker/docker-compose.1604.41.yaml run test
 version: "3"
 
 services:
 
-    swift-nio:
-        image: swift-nio:latest
-        build:
-            context: .
-            dockerfile: Dockerfile
+  runtime-setup:
+    image: swift-nio:default
+    build:
+      context: .
+      dockerfile: Dockerfile
 
-    unit-tests:
-        depends_on: [swift-nio]
-        image: swift-nio:latest
-        command: /bin/bash -cl "swift test"
-        volumes:
-            - ~/.ssh:/root/.ssh
-            - ..:/code
-        working_dir: /code
+  common: &common
+    image: swift-nio:default
+    depends_on: [runtime-setup]
+    volumes:
+      - ~/.ssh:/root/.ssh
+      - ..:/code
+    working_dir: /code
 
-    run-rest:
-        depends_on: [swift-nio]
-        image: swift-nio:latest
-        ports:
-            - "8010:8010"
-        command: /bin/bash -cl "swift run SgBaseRest"
-        volumes:
-            - ~/.ssh:/root/.ssh
-            - ..:/code
-        working_dir: /code
+  unit-tests:
+    <<: *common
+    command: /bin/bash -cl "swift test"
 
-    run-simple:
-        depends_on: [swift-nio]
-        image: swift-nio:latest
-        ports:
-            - "8888:8888"
-        command: /bin/bash -cl "swift run SgSimpleServer"
-        volumes:
-            - ~/.ssh:/root/.ssh
-            - ..:/code
-        working_dir: /code
+  integration-tests:
+    <<: *common
+    command: /bin/bash -cl "./scripts/integration_tests.sh"
+
+  rest-srv:
+    <<: *common
+    ports:
+      - "8010:8010"
+    command: /bin/bash -cl "swift run SgBaseRest"
+
+  simple-srv:
+    <<: *common
+    ports:
+      - "8011:8011"
+    command: /bin/bash -cl "swift run SgSimpleServer"
