--- a/docker/docker-compose.1604.403.yaml
+++ b/docker/docker-compose.1604.403.yaml
@@ -12,8 +12,8 @@ services:
   unit-tests:
     image: swift-nio:16.04-4.0.3
 
-  base-srv:
+  rest:
     image: swift-nio:16.04-4.0.3
 
-  simple-srv:
+  simple:
     image: swift-nio:16.04-4.0.3
